docs: update docs swagger
